...
                        )
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .background(Color.White)
                        .focusRequester(focusRequester)
                        .testTag("SEARCH_BAR_INPUT")
                )

                LaunchedEffect(Unit) {
                    focusRequester.requestFocus()
                }
            }
...
                    Row {
                        Box(modifier = Modifier.height(if (isLogMenu) 650.dp else 570.dp)) {
                            LazyColumn(
                                modifier = Modifier
                                    .fillMaxSize()
                                    .padding(top = 15.dp)
                                    .testTag("MOVIE_RESULTS_LIST")
                            ) {
                                items(movieResults.size) { index ->
                                    val movie = movieResults[index]
                                    val halfSheet = halfSheets[movie.id.toString()] ?: ""
                                    MovieResult(
                                        navController,
...
        Column(modifier = Modifier
            .weight(3F)
            .fillMaxHeight()
            .height(70.dp)
            .padding(start = 8.dp)
            .clickable { navController.navigate("search_movie_details_${movie.id}_${0}") }
            .testTag("MOVIE_RESULT"),
            verticalArrangement = Arrangement.Center) {
            Text(
                "${movie.title}",
                style = MaterialTheme.typography.titleSmall,
                fontWeight = FontWeight.Bold,
                color = Color.White,
...
                        .show()
                    isClicked = true
                } else if (!isClicked) {
                    isSheetOpen = true
                }
            }
            .testTag("ADD_MOVIE_TO_LOG_BUTTON"),
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Center) {

            if (isClicked) {
                Image(
                    painter = painterResource(id = R.drawable.checkbutton2),
...
                        Divider(thickness = 1.dp, color = Color(0xFF303437))
                    }
                },
                containerColor = colorResource(id = R.color.bottomnav),
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("ADD_MOVIE_TO_LOG_POPUP")
            ) {
                if (allLogs != null) {
                    val checkedStates =
                        remember { mutableStateListOf<Boolean>().apply { addAll(List(allLogs!!.size) { false }) } }

                    Spacer(modifier = Modifier.height(5.dp))
...
//                            Checkbox(
//                                checked = checkedStates[index],
//                                onCheckedChange = { isChecked ->
//                                    checkedStates[index] = isChecked
//                                },
//                                modifier = Modifier
//                                    .testTag("LOG_CHECKBOX")
//                            )
                                        CircleCheckbox(selected = checkedStates[index], onChecked = {
                                                isChecked -> checkedStates[index] = isChecked as Boolean
                                        })
                                    }
                                }
...
                        if (isAnyChecked) {
                            androidx.compose.material3.Button(
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .height(60.dp)
                                    .padding(horizontal = 24.dp)
                                    .testTag("ADD_TO_LOG_BUTTON"),
                                onClick = {
                                    // Use the checkedStates list to find out which checkboxes are checked
                                    if (isAnyChecked) {
                                        val checkedItems =
                                            allLogs!!.indices.filter { checkedStates[it] }
                                        //Log.d(com.tabka.backblogapp.ui.screens.TAG, "Checked Items: $checkedItems")
...
@Composable
fun NoResults() {
    Row(
        modifier = Modifier
            .fillMaxSize()
            .padding(top = 100.dp)
            .testTag("NO_RESULTS_ROW"),
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.Center
    ) {
        Text(
            "No results",
            style = MaterialTheme.typography.headlineLarge,
...
